--- a/scss/html.scss
+++ b/scss/html.scss
@@ -15,7 +15,7 @@
       max-width: 1180px;
       margin: 0 auto;
       color: #333333;
-      font-size: rem(16);
+      font-size: $fz16;
       letter-spacing: 1px;
       line-height: 1.8;
       ul.style {
