--- a/scss/index.scss
+++ b/scss/index.scss
@@ -21,14 +21,14 @@ section {
 //   border-radius: 30px;
 //   padding: 10px 20px;
 //   background: $mainColor;
-//   font-size: rem(15);
+//   font-size: $fz15;
 //   white-space: nowrap;
 //   position: relative;
 //   isolation: isolate;
 //   @include transition(all, 0.3);
 //   @include screen('mobile') {
 //     width: auto;
-//     font-size: rem(14);
+//     font-size: $fz14;
 //   }
 //   &::after {
 //     content: '';
@@ -58,7 +58,7 @@ section {
   color: $secColor;
   z-index: 9;
   @include screen('tablet') {
-    font-size: rem(14);
+    font-size: $fz14;
   }
   &::after {
     content: '';
@@ -79,7 +79,7 @@ section {
 }
 
 .unitTitle {
-  font-size: rem(43);
+  font-size: $fz43;
   font-weight: 800;
   color: #000;
   position: relative;
@@ -88,7 +88,7 @@ section {
   line-height: 1.2;
   isolation: isolate;
   @include screen('mobile') {
-    font-size: rem(28);
+    font-size: $fz28;
     padding: 0px 0 0 20px;
     margin: 0 0 10px;
   }
@@ -97,15 +97,15 @@ section {
   }
   .zh {
     margin: 15px 0;
-    font-size: rem(28);
+    font-size: $fz28;
     font-weight: 500;
     letter-spacing: 5px;
     text-indent: 5px;
     @include screen('tablet') {
-      font-size: rem(24);
+      font-size: $fz24;
     }
     @include screen('mobile') {
-      font-size: rem(20);
+      font-size: $fz20;
       margin: 10px 0;
     }
   }
@@ -210,7 +210,7 @@ section {
         border: 1px solid $mainColor;
         color: #fff;
         height: 45px;
-        font-size: rem(13);
+        font-size: $fz13;
         @include screen('mobile') {
           height: 40px;
           max-width: 160px;
@@ -383,26 +383,26 @@ section {
         right: 0px;
       }
       h2 {
-        font-size: rem(140);
+        font-size: $fz140;
         font-weight: 700;
         @include screen('tablet') {
-          font-size: rem(70);
+          font-size: $fz70;
         }
         @include screen('mobile') {
-          font-size: rem(40);
+          font-size: $fz40;
         }
       }
       span {
-        font-size: rem(51);
+        font-size: $fz50;
         font-weight: 800;
         position: relative;
         display: block;
         isolation: isolate;
         @include screen('tablet') {
-          font-size: rem(40);
+          font-size: $fz40;
         }
         @include screen('mobile') {
-          font-size: rem(26);
+          font-size: $fz26;
           margin-bottom: 5px;
         }
         &::before {
@@ -420,16 +420,16 @@ section {
       }
       .description {
         text-align: right;
-        font-size: rem(28);
+        font-size: $fz28;
         font-weight: 400;
         color: $secColor;
         margin: 20px 0 0;
         letter-spacing: 6px;
         @include screen('tablet') {
-          font-size: rem(24);
+          font-size: $fz24;
         }
         @include screen('mobile') {
-          font-size: rem(20);
+          font-size: $fz20;
         }
       }
     }
@@ -468,7 +468,7 @@ section {
         -webkit-box-orient: vertical;
         color: #000;
         line-height: 1.8;
-        font-size: rem(18);
+        font-size: $fz18;
       }
     }
     ul {
@@ -527,13 +527,13 @@ section {
         }
         .title {
           text-align: center;
-          font-size: rem(24);
+          font-size: $fz24;
           white-space: nowrap;
           @include screen('tablet') {
-            font-size: rem(20);
+            font-size: $fz20;
           }
           @include screen('mobile') {
-            font-size: rem(18);
+            font-size: $fz18;
           }
           .en {
             font-weight: 800;
@@ -580,17 +580,17 @@ section {
     white-space: nowrap;
     .title {
       color: $mainColor;
-      font-size: rem(24);
+      font-size: $fz24;
       font-weight: 700;
       display: flex;
       align-items: center;
       margin: 0 0 15px 0;
       letter-spacing: 2px;
       @include screen('tablet') {
-        font-size: rem(20);
+        font-size: $fz20;
       }
       @include screen('mobile') {
-        font-size: rem(18);
+        font-size: $fz18;
       }
       &::before {
         content: '';
@@ -631,7 +631,7 @@ section {
         }
       }
       button {
-        font-size: rem(24);
+        font-size: $fz24;
         font-weight: 700;
         color: #fff;
         padding: 0;
@@ -639,11 +639,11 @@ section {
         width: 160px;
         flex-shrink: 0;
         @include screen('tablet') {
-          font-size: rem(18);
+          font-size: $fz18;
           width: 100px;
         }
         @include screen('mobile') {
-          font-size: rem(16);
+          font-size: $fz16;
           width: 80px;
         }
       }
@@ -660,13 +660,13 @@ section {
         span {
           display: block;
           margin: 0 10px 0 0;
-          font-size: rem(18);
+          font-size: $fz18;
           font-weight: 400;
           @include screen('tablet') {
             width: 70px;
           }
           @include screen('mobile') {
-            font-size: rem(16);
+            font-size: $fz16;
           }
         }
       }
@@ -703,7 +703,7 @@ section {
       padding: 0px 20px 40px 20px;
     }
     .title {
-      font-size: rem(28);
+      font-size: $fz28;
       font-weight: 500;
       color: #b9cae9;
       line-height: 1.2;
@@ -714,14 +714,14 @@ section {
       -webkit-line-clamp: 2;
       -webkit-box-orient: vertical;
       @include screen('tablet') {
-        font-size: rem(24);
+        font-size: $fz24;
       }
       @include screen('mobile') {
-        font-size: rem(20);
+        font-size: $fz20;
       }
     }
     .description {
-      font-size: rem(18);
+      font-size: $fz18;
       line-height: 1.8;
       max-width: 900px;
       margin: 0 200px 0 0;
@@ -731,7 +731,7 @@ section {
       -webkit-box-orient: vertical;
       color: #b9cae9;
       @include screen('tablet') {
-        font-size: rem(16);
+        font-size: $fz16;
       }
       @include screen('mobile') {
         margin: 0 0 30px;
@@ -785,7 +785,7 @@ section {
         }
       }
       .title {
-        font-size: rem(30);
+        font-size: $fz30;
         font-weight: 700;
         letter-spacing: 1px;
         overflow: hidden;
@@ -795,7 +795,7 @@ section {
         color: #000;
         margin: 0 auto 10px;
         @include screen('tablet') {
-          font-size: rem(24);
+          font-size: $fz24;
         }
       }
       p {
@@ -923,15 +923,15 @@ section {
         width: 65%;
         position: relative;
         .title {
-          font-size: rem(46);
+          font-size: $fz46;
           font-weight: 700;
           line-height: 1.2;
           margin: 0 0 20px 0;
           @include screen('tablet') {
-            font-size: rem(30);
+            font-size: $fz30;
           }
           @include screen('mobile') {
-            font-size: rem(26);
+            font-size: $fz26;
             margin: 0 0 10px 0;
           }
         }
@@ -999,7 +999,7 @@ section {
         }
       }
       .item {
-        font-size: rem(18);
+        font-size: $fz18;
         padding: 10% 12%;
         font-weight: 700;
         isolation: isolate;
@@ -1046,13 +1046,13 @@ section {
           // }
         }
         .title {
-          font-size: rem(24);
+          font-size: $fz24;
           text-align: center;
           letter-spacing: 3px;
           text-indent: 3px;
           font-weight: 400;
           @include screen('mobile') {
-            font-size: rem(18);
+            font-size: $fz18;
           }
         }
         // &.food i::before {
@@ -1303,17 +1303,17 @@ section {
       justify-content: center;
       margin: 0 0 8%;
       .day {
-        font-size: rem(50);
+        font-size: $fz50;
         font-weight: 500;
         line-height: 1;
       }
       .date {
-        font-size: rem(13);
+        font-size: $fz13;
       }
     }
     .title {
       color: #fff;
-      font-size: rem(24);
+      font-size: $fz24;
       font-weight: 700;
       overflow: hidden;
       display: -webkit-box;
@@ -1325,7 +1325,7 @@ section {
         margin-bottom: 10px;
       }
       @include screen('mobile') {
-        font-size: rem(20);
+        font-size: $fz20;
       }
     }
     .description {
