--- a/css/style.css
+++ b/css/style.css
@@ -550,7 +550,7 @@ button:focus {
   text-align: center;
 }
 .privacyBox a {
-  color: #e50012;
+  color: #fdd100;
 }
 .privacyBox .closePrivacy {
   right: 12px;
@@ -728,7 +728,7 @@ button:focus {
 }
 @media screen and (max-width: 1000px) {
   .unitTitleBox .title {
-    font-size: 2.6875rem;
+    font-size: 2.687rem;
   }
 }
 @media screen and (max-width: 767px) {
@@ -841,22 +841,18 @@ button:focus {
   isolation: isolate;
   position: relative;
 }
-@media screen and (max-width: 1000px) {
-  .siteHeader {
-    position: fixed;
-    height: 50px;
-    border-bottom: #ddd 1px solid;
-    background: #fff;
-  }
-}
 
 .headerBox {
   position: relative;
   z-index: 2;
   padding: 0 20px;
+  width: 100%;
+  top: 0;
 }
 @media screen and (max-width: 1000px) {
   .headerBox {
+    position: fixed;
+    background: #fff;
     padding: 0 50px 0 0;
   }
 }
@@ -873,9 +869,9 @@ button:focus {
 @media screen and (min-width: 1000px) {
   .headerBox .container {
     display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
     justify-content: flex-end;
+    align-items: center;
+    position: unset;
   }
 }
 @media screen and (max-width: 1000px) {
@@ -890,8 +886,7 @@ button:focus {
   flex-shrink: 0;
   line-height: 0;
   position: relative;
-  margin: 0 3% 0 0;
-  flex-basis: 100%;
+  margin: 0 auto 0 0;
   display: flex;
   align-items: center;
 }
@@ -920,7 +915,7 @@ button:focus {
   .headFix .wrapper {
     padding-top: 50px;
   }
-  .headFix .siteHeader {
+  .headFix .headerBox {
     position: fixed;
     background: #fff;
     box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.3);
@@ -937,29 +932,24 @@ button:focus {
   .headFix .headerBox .logo img {
     height: 50px;
   }
-  .headFix .headerBox .menuBox,
-  .headFix .headerBox .mainMenu,
-  .headFix .headerBox .mainMenu > ul {
-    height: 100%;
+  .headFix .menuBox {
+    margin: 0;
   }
-  .headFix .menuBox .mainMenu > ul > li.nextLv > a::after,
-  .headFix .menuBox .mainMenu > ul > li.nextLv > button::after {
-    right: 10px;
-  }
-  .headFix .menuBox .mainMenu > ul > li.nextLv > a,
-  .headFix .menuBox .mainMenu > ul > li.nextLv > button {
+  .headFix .menuBox .mainMenu > ul > li.nextLv > a, .headFix .menuBox .mainMenu > ul > li.nextLv > button {
     font-size: 1rem;
     padding: 15px 30px 15px 15px;
   }
-  .headFix .menuBox .mainMenu > ul > li:nth-last-child(2) .nextMenuBox {
-    transform: translateX(-50%);
-    left: 50%;
-    right: auto;
+  .headFix .menuBox .mainMenu > ul > li.nextLv > a::after, .headFix .menuBox .mainMenu > ul > li.nextLv > button::after {
+    right: 10px;
   }
   .headFix .topNav {
     margin: 0 0 0 auto;
     height: 100%;
     order: 9;
+  }
+  .headFix .topNav .language .btn::before {
+    width: 20px !important;
+    height: 20px !important;
   }
   .headFix .topNav .inquiryCar {
     border: none;
@@ -973,14 +963,30 @@ button:focus {
   }
   .headFix .topNav .inquiryCar a::before,
   .headFix .topNav .inquiryCar button::before {
-    width: 30px !important;
-    height: 30px !important;
+    width: 20px !important;
+    height: 20px !important;
     margin: 0;
   }
   .headFix .topNav .inquiryCar a.hasItem::after,
   .headFix .topNav .inquiryCar button.hasItem::after {
-    left: 12px;
-    top: 0px;
+    left: 7px;
+    top: 2px;
+  }
+  .headFix .menuSearch {
+    transform: translateY(-30%);
+  }
+  .headFix .menuSearch .titleBtn {
+    font-size: 1rem;
+    font-weight: 400;
+    padding: 15px 10px 13px;
+  }
+  .headFix .menuSearch .formBox button {
+    height: 30px !important;
+  }
+  .headFix .menuSearch .formBox .inputItem select,
+  .headFix .menuSearch .formBox .inputItem input {
+    height: 30px;
+    padding: 0 10px !important;
   }
 }
 
@@ -991,8 +997,8 @@ button:focus {
 }
 @media screen and (min-width: 1000px) {
   .topNav {
-    margin: 0 15px 15px 0;
     justify-content: flex-end;
+    margin-bottom: 30px;
   }
 }
 .topNav > div {
@@ -1025,7 +1031,7 @@ button:focus {
   background: #002e84;
   flex-shrink: 0;
 }
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1100px) {
   .topNav > div button::before,
   .topNav > div a::before {
     margin: 0 !important;
@@ -1038,7 +1044,7 @@ button:focus {
   border: 1px solid #002e84;
   border-radius: 20px;
 }
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1100px) {
   .inquiryCar {
     border: none;
     right: 0px !important;
@@ -1053,7 +1059,10 @@ button:focus {
   display: flex;
   align-items: center;
   height: 30px;
-  padding: 0 15px;
+  padding: 5px 15px 3px;
+}
+.inquiryCar a span {
+  line-height: 1;
 }
 .inquiryCar a::before {
   content: "";
@@ -1151,7 +1160,7 @@ button:focus {
 }
 .language ul a {
   white-space: nowrap;
-  font-size: 0.9375rem;
+  font-size: 0.937rem;
   font-weight: normal;
   display: block;
   text-align: center;
@@ -1177,129 +1186,168 @@ button:focus {
   }
 }
 
+.menuSearch {
+  position: absolute;
+  background: #002e84;
+  -webkit-clip-path: polygon(34px 0%, 100% 0, 100% 100%, 0% 100%);
+          clip-path: polygon(34px 0%, 100% 0, 100% 100%, 0% 100%);
+  padding: 0 50px 0 34px;
+  right: 0;
+  top: 100%;
+  transform: translateY(-50%);
+  display: flex;
+}
 @media screen and (max-width: 1000px) {
   .menuSearch {
-    right: 80px !important;
-    top: 0;
-  }
-}
-.menuSearch.active .searchOuter {
-  width: 100%;
-  padding: 0 20px;
-}
-@media screen and (max-width: 1000px) {
-  .menuSearch.active .searchOuter {
+    transform: translateY(0%);
+    position: relative;
+    top: 0px;
+    -webkit-clip-path: none;
+            clip-path: none;
     width: 100%;
-  }
-}
-.menuSearch.active .btn {
-  background: #08111f;
-}
-.menuSearch.active .btn::before {
-  background: #fff;
-}
-.menuSearch.active .btn::after {
-  background: #fff;
-}
-.menuSearch .searchOuter {
-  width: 0;
-  position: absolute;
-  z-index: 9;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  display: flex;
-  align-items: center;
-  background: #000;
-  overflow: hidden;
-  transition: all 0.3s ease;
-}
-@media screen and (max-width: 1000px) {
-  .menuSearch .searchOuter {
-    height: 50px;
-    position: fixed;
-    top: 50px;
-  }
-}
-.menuSearch .btn {
-  position: relative;
-  z-index: 8;
-  display: flex;
-  align-items: center;
-  text-transform: uppercase;
-  font-weight: 600;
-  font-size: 15px;
-  padding: 0;
-  background: none;
-}
-@media screen and (max-width: 1000px) {
-  .menuSearch .btn {
-    width: 40px;
-    height: 50px;
     padding: 0;
-    text-indent: -99999px;
-    justify-content: center;
-    background: none;
+    flex-direction: column;
   }
 }
-.menuSearch .btn::before {
-  content: "";
-  -webkit-mask: url("../images/icon/icon_search2.svg") center no-repeat;
-          mask: url("../images/icon/icon_search2.svg") center no-repeat;
-}
-.menuSearch .searchBox {
-  flex-grow: 1;
-  opacity: 0.6;
-}
-.menuSearch .searchBtn {
-  width: 14px;
-  height: 14px;
-}
-.menuSearch .searchClose {
-  width: 14px;
-  height: 14px;
+.menuSearch .titleBtn {
+  font-size: 1rem;
+  color: #fff;
+  background: none;
+  padding: 15px;
+  width: 100%;
   position: relative;
-  margin-right: 10px;
-  cursor: pointer;
 }
-.menuSearch .searchClose::before, .menuSearch .searchClose::after {
-  content: "";
-  width: 20px;
-  height: 2px;
-  background: #fff;
-  display: block;
-  position: absolute;
-  top: calc(50% - 2px);
-  left: 0;
-  transform: rotate(45deg);
-  transition: all 0.3s ease;
+@media screen and (min-width: 1000px) {
+  .menuSearch .titleBtn {
+    pointer-events: none;
+    font-weight: 700;
+    letter-spacing: 2px;
+    padding: 20px;
+    font-size: 1.312rem;
+    width: auto;
+  }
 }
-.menuSearch .searchClose::after {
-  transform: rotate(-45deg);
+@media screen and (max-width: 1000px) {
+  .menuSearch .titleBtn::after {
+    content: "+";
+    color: #fff;
+    font-size: 15px;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 5%;
+  }
 }
-.menuSearch input {
+.menuSearch .formBox {
+  padding: 0;
+  display: flex;
+  align-items: center;
+}
+@media screen and (max-width: 1000px) {
+  .menuSearch .formBox {
+    display: none;
+    justify-content: center;
+  }
+}
+.menuSearch .formBox button {
+  margin: 0 2px;
+}
+.menuSearch .formBox button[type=submit] {
+  height: 40px;
+  background: #fdd100;
+  color: #002e84;
+  font-size: 1.312rem;
+  font-weight: 600;
+  padding: 0 20px;
+  letter-spacing: 0;
+}
+@media screen and (max-width: 1000px) {
+  .menuSearch .formBox button[type=submit] {
+    width: calc(100% - 8px);
+    margin: 4px;
+  }
+}
+.menuSearch .formBox button[type=reset] {
   background: none;
-  border: none;
-  color: #fff;
+  color: #fdd100;
+  white-space: nowrap;
+  font-size: 1rem;
+  text-decoration: underline;
 }
-.menuSearch input::-moz-placeholder {
-  color: #fff;
+@media screen and (max-width: 1000px) {
+  .menuSearch .formBox button[type=reset] {
+    width: 100%;
+    padding: 10px;
+  }
 }
-.menuSearch input::placeholder {
-  color: #fff;
+.menuSearch .formBox .inputItem {
+  padding: 0px;
+  width: auto;
 }
-.menuSearch .searchBtn {
-  margin-left: 10px;
-  background: none;
+@media screen and (max-width: 1000px) {
+  .menuSearch .formBox .inputItem {
+    flex-wrap: wrap;
+  }
 }
-.menuSearch .searchBtn::before {
-  content: "";
-  width: 15px;
-  height: 15px;
-  display: block;
-  -webkit-mask: url("../images/icon/icon_search.svg") center no-repeat;
-          mask: url("../images/icon/icon_search.svg") center no-repeat;
-  background: #fff;
+.menuSearch .formBox .inputItem input {
+  padding: 5px 10px !important;
+}
+.menuSearch .formBox .inputItem select {
+  color: #fff !important;
+}
+.menuSearch .formBox .inputItem select option {
+  color: #000;
+}
+.menuSearch .formBox .inputItem .select {
+  padding: 0 2px;
+  width: 150px;
+}
+@media screen and (max-width: 1100px) {
+  .menuSearch .formBox .inputItem .select {
+    width: auto;
+  }
+}
+@media screen and (max-width: 1000px) {
+  .menuSearch .formBox .inputItem .select {
+    width: 50%;
+    padding: 4px;
+  }
+}
+.menuSearch .formBox .inputItem .select::before {
+  width: 0;
+  height: 0;
+  top: 50%;
+  right: 10px;
+  transform: translateY(-50%) rotate(0);
+  border-style: solid;
+  border-width: 6px 4px 0 4px;
+  border-color: #fdd100 transparent transparent transparent;
+}
+.menuSearch .formBox .inputItem .input {
+  padding: 0 2px;
+  width: 200px;
+}
+@media screen and (max-width: 1100px) {
+  .menuSearch .formBox .inputItem .input {
+    width: auto;
+  }
+}
+@media screen and (max-width: 1000px) {
+  .menuSearch .formBox .inputItem .input {
+    width: 50%;
+    padding: 4px;
+  }
+}
+.menuSearch .formBox .inputItem select,
+.menuSearch .formBox .inputItem input {
+  color: #fff !important;
+  border-color: #5874a8 !important;
+  height: 40px;
+}
+.menuSearch .formBox .inputItem select.selectControl:focus,
+.menuSearch .formBox .inputItem input.inputControl:focus,
+.menuSearch .formBox .inputItem textarea.textareaControl:focus {
+  border-color: #fff;
 }
 
 .menuBox {
@@ -1308,6 +1356,7 @@ button:focus {
 @media screen and (min-width: 1000px) {
   .menuBox {
     position: relative;
+    margin-bottom: 30px;
   }
 }
 @media screen and (max-width: 1000px) {
@@ -1425,12 +1474,12 @@ button:focus {
 }
 @media screen and (min-width: 1000px) {
   .menuBox .mainMenu > ul > li.nextLv > a, .menuBox .mainMenu > ul > li.nextLv > button {
-    padding: 15px 30px 25px 35px;
+    padding: 15px 30px 15px 35px;
   }
 }
 @media screen and (max-width: 1200px) {
   .menuBox .mainMenu > ul > li.nextLv > a, .menuBox .mainMenu > ul > li.nextLv > button {
-    padding: 15px 30px 25px 15px;
+    padding: 15px 30px 15px 15px;
   }
 }
 @media screen and (max-width: 1000px) {
@@ -1447,7 +1496,7 @@ button:focus {
   border-width: 0 2px 2px 0;
   position: absolute;
   right: 30px;
-  top: 50%;
+  top: calc(50% + 5px);
   transform: translateY(-150%) rotate(45deg);
 }
 @media screen and (min-width: 1000px) {
@@ -1464,11 +1513,6 @@ button:focus {
   .menuBox .mainMenu > ul > li.nextLv > a::after, .menuBox .mainMenu > ul > li.nextLv > button::after {
     right: 10px;
   }
-}
-.menuBox .mainMenu > ul > li:nth-last-child(2) .nextMenuBox {
-  right: 0;
-  left: auto;
-  transform: translateX(0);
 }
 .menuBox .mainMenu > ul li > ul {
   display: none;
@@ -1562,7 +1606,7 @@ button:focus {
     min-width: 200px;
     width: 23%;
     flex-grow: 1;
-    font-size: 1.3125rem;
+    font-size: 1.312rem;
     font-weight: 600;
     color: #000;
   }
@@ -1685,7 +1729,7 @@ button:focus {
   width: 100%;
 }
 .breadcrumbBox .breadcrumb {
-  font-size: 0.8125rem;
+  font-size: 0.812rem;
   z-index: 3;
   color: #333333;
   opacity: 0.7;
@@ -1792,7 +1836,7 @@ button:focus {
   margin: 0 0 20px;
 }
 .footerBox .footerMenu .menu li a {
-  font-size: 0.9375rem;
+  font-size: 0.937rem;
   display: block;
   padding: 5px 0;
 }
@@ -1811,7 +1855,7 @@ button:focus {
 .footerBox .copyright {
   max-width: 1560px;
   margin: 3% auto 0;
-  font-size: 0.8125rem;
+  font-size: 0.812rem;
   color: #666666;
 }
 @media screen and (max-width: 1000px) {
@@ -1837,10 +1881,13 @@ button:focus {
 }
 
 .floatNav {
-  position: fixed;
   right: 10px;
   bottom: 20%;
-  z-index: 91;
+}
+@media screen and (min-width: 1000px) {
+  .floatNav {
+    position: fixed;
+  }
 }
 .floatNav > a, .floatNav > button {
   width: 50px;
@@ -1848,13 +1895,13 @@ button:focus {
   border-radius: 100%;
   padding: 0;
   padding: 7px 0;
-  font-size: 0.9375rem;
+  font-size: 0.937rem;
   text-align: center;
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 9;
   cursor: pointer;
+  position: relative;
   transition: all 0.3s ease;
 }
 @media screen and (max-width: 1000px) {
@@ -1877,6 +1924,14 @@ button:focus {
 .floatNav .goTop {
   background: #fdd100;
   margin: 20px 0 0;
+}
+@media screen and (max-width: 1000px) {
+  .floatNav .goTop {
+    right: 10px;
+    bottom: 20%;
+    z-index: 50;
+    position: fixed;
+  }
 }
 .floatNav .goTop::before {
   width: 11px;
@@ -1904,8 +1959,8 @@ button:focus {
     background: none;
     position: fixed;
     top: 0;
-    right: 170px;
-    z-index: 90;
+    right: 130px;
+    z-index: 99;
   }
 }
 .floatNav .line::before,
@@ -1930,7 +1985,7 @@ button:focus {
 @media screen and (max-width: 1000px) {
   .floatNav .fb {
     margin: 0;
-    right: 210px;
+    right: 170px;
   }
 }
 .floatNav .fb::before {
@@ -2316,7 +2371,7 @@ button:focus {
 }
 .formBox a {
   color: #666666;
-  font-size: 0.8125rem;
+  font-size: 0.812rem;
   text-decoration: underline;
 }
 .formBox a:nth-child(2) {
@@ -2380,38 +2435,7 @@ button:focus {
   margin-left: 10px;
 }
 .subMenu li a {
-  color: #fdd100;
-  font-weight: 300;
-  font-size: 1rem;
-  padding: 7px 10px 5px;
-  z-index: 0;
-  text-align: center;
-  display: block;
-  position: relative;
-  background: transparent;
-  border: #fdd100 1px solid;
-  cursor: pointer;
   padding: 7px 15px 5px;
-}
-.subMenu li a::before {
-  content: "";
-  position: absolute;
-  z-index: -1;
-  width: 0;
-  right: 0;
-  bottom: 0;
-  top: 0;
-  display: block;
-  background: #fdd100;
-  transition: all 0.3s ease;
-}
-.subMenu li a:hover {
-  color: #fff;
-  border: #fdd100 1px solid;
-}
-.subMenu li a:hover::before {
-  width: 100%;
-  left: 0;
 }
 
 @keyframes lightBoxOpen {
