--- a/scss/partials/_variable.scss
+++ b/scss/partials/_variable.scss
@@ -24,6 +24,36 @@ $roboto: 'Roboto', 'Noto Sans TC', Arial, '微軟正黑體', 'Microsoft JhengHei
 //-------------------------------------------------------------版面------//
 
 $mainFontSize: 16;
+$fz13: 0.812rem;
+$fz14: 0.875rem;
+$fz15: 0.937rem;
+$fz16: 1rem;
+$fz18: 1.125rem;
+$fz20: 1.25rem;
+$fz21: 1.312rem;
+$fz22: 1.375rem;
+$fz23: 1.437rem;
+$fz24: 1.5rem;
+$fz26: 1.625rem;
+$fz28: 1.75rem;
+$fz30: 1.875rem;
+$fz32: 2rem;
+$fz36: 2.25rem;
+$fz40: 2.5rem;
+$fz43: 2.687rem;
+$fz46: 2.875rem;
+$fz48: 3rem;
+$fz50: 3.125rem;
+$fz54: 3.375rem;
+$fz56: 3.5rem;
+$fz60: 3.75rem;
+$fz64: 4rem;
+$fz66: 4.125rem;
+$fz70: 4.375rem;
+$fz72: 4.5rem;
+$fz100: 6.25rem;
+$fz140: 8.75rem;
+
 $wrapperPaddingTop: 125px;
 $wrapperPaddingTopMobile: 50px;
 $headerTop: 45px;
