--- a/scss/products.scss
+++ b/scss/products.scss
@@ -2,15 +2,15 @@
 @import '../scss/partials/shared';
 
 .categoryTitle {
-  font-size: rem(28);
+  font-size: $fz28;
   font-weight: 800;
   color: #000;
   margin: 0 0 4%;
   @include screen('tablet') {
-    font-size: rem(24);
+    font-size: $fz24;
   }
   @include screen('mobile') {
-    font-size: rem(20);
+    font-size: $fz20;
   }
 }
 .categoryList {
@@ -76,10 +76,10 @@
       }
       .title {
         color: #000;
-        font-size: rem(18);
+        font-size: $fz18;
         letter-spacing: 1px;
         @include screen('tablet') {
-          font-size: rem(16);
+          font-size: $fz16;
         }
       }
       &.active,
@@ -103,7 +103,7 @@
   }
   .description {
     color: #545454;
-    font-size: rem(18);
+    font-size: $fz18;
     max-width: 900px;
     line-height: 1.8;
     letter-spacing: 1px;
@@ -117,7 +117,7 @@
     justify-content: space-between;
     line-height: 0.7;
     color: #fff;
-    font-size: rem(24);
+    font-size: $fz24;
     font-weight: 700;
     z-index: 9;
     background: $mainColor;
@@ -125,7 +125,7 @@
     max-width: 450px;
     height: 80px;
     @include screen('tablet') {
-      font-size: rem(20);
+      font-size: $fz20;
       height: 60px;
     }
     &::after {
@@ -145,7 +145,7 @@
   .description {
     max-width: 900px;
     color: #545454;
-    font-size: rem(18);
+    font-size: $fz18;
     line-height: 1.8;
     letter-spacing: 1px;
     font-weight: 300;
@@ -165,18 +165,18 @@
     background: $mainColor;
     border: 1px solid $mainColor;
     color: #fff;
-    font-size: rem(24);
+    font-size: $fz24;
     font-weight: 700;
     letter-spacing: 2px;
     transform: translateY(50%);
     @include screen('tablet') {
       width: 50%;
       height: 60px;
-      font-size: rem(20);
+      font-size: $fz20;
     }
     @include screen('mobile') {
       width: 100%;
-      font-size: rem(18);
+      font-size: $fz18;
     }
     &::after {
       content: '';
@@ -258,7 +258,7 @@
         content: 'VIEW MORE';
         display: block;
         background: $secColor;
-        font-size: rem(15);
+        font-size: $fz15;
         text-align: center;
         padding: 10px 5px 8px;
         @include transition(all, 0.3);
@@ -266,7 +266,7 @@
     }
     .title {
       color: #000;
-      font-size: rem(28);
+      font-size: $fz28;
       font-weight: 700;
       display: block;
       line-height: 1;
@@ -281,16 +281,22 @@
       text-indent: 2px;
       @include transition(all, 0.3);
       @include screen('tablet') {
-        font-size: rem(24);
+        font-size: $fz24;
       }
       @include screen('mobile') {
-        font-size: rem(20);
+        font-size: $fz20;
       }
     }
   }
 }
 
 //list
+.productsInfoTopBox {
+  margin-bottom: 100px;
+  @include screen('tablet') {
+    margin-bottom: 10px;
+  }
+}
 .productsListBox .productsInfoTopBox {
   position: relative;
   .container {
@@ -344,12 +350,12 @@
     .description {
       padding: 0 30px 0 0;
       color: #545454;
-      font-size: rem(18);
+      font-size: $fz18;
       line-height: 1.8;
       letter-spacing: 1px;
       font-weight: 300;
       @include screen('tablet') {
-        font-size: rem(16);
+        font-size: $fz16;
         padding: 0;
         margin: 0 0 30px;
       }
@@ -366,12 +372,12 @@
       font-weight: 600;
       line-height: 1;
       isolation: isolate;
-      font-size: rem(24);
+      font-size: $fz24;
       @include transition(all, 0.3);
       @include screen('tablet') {
         position: relative;
         margin: 0 auto;
-        font-size: rem(16);
+        font-size: $fz16;
       }
       &::before {
         content: '';
@@ -451,21 +457,77 @@
   aside {
     width: 230px;
     flex-shrink: 0;
-    margin: 62.3px 30px 0 0;
+    margin: 0 30px 0 0;
+    position: relative;
+    background: #fff;
+    @include transition(all, 0.3);
     @include screen('tablet') {
-      width: 100%;
-      margin: 0 0 10px;
+      position: fixed;
+      left: 0;
+      transform: translateX(-100%);
+      z-index: 20;
+      top: 100px;
+      bottom: 0;
+      margin: 0;
+    }
+    &.active {
+      transform: translateX(0%);
+    }
+    .sideBtn {
+      line-height: 2;
+      display: none;
+      position: absolute;
+      width: 35px;
+      left: 100%;
+      top: 10px;
+      -ms-writing-mode: tb-lr;
+      writing-mode: vertical-lr;
+      background: #fff;
+      padding: 10px 0px;
+      border-radius: 0 5px 5px 0;
+      cursor: pointer;
+      box-shadow: 0 3px 5px 1px rgba(0, 0, 0, 0.15);
+      z-index: -1;
+      @include screen('tablet') {
+        display: block;
+      }
     }
     .sideBox {
+      overflow: hidden;
+      overflow-y: auto;
+      scrollbar-color: $mainColor rgba(0, 0, 0, 0.2);
+      scrollbar-width: thin;
+      background: #fff;
+
+      &::-webkit-scrollbar {
+        width: 5px;
+        height: 5px;
+      }
+
+      &::-webkit-scrollbar-thumb {
+        border-radius: 100px;
+        box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
+        background: $mainColor;
+      }
+
+      &::-webkit-scrollbar-track {
+        box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
+        border-radius: 0;
+        background: rgba(0, 0, 0, 0.1);
+      }
       @include screen('tabletMin') {
         top: 75px;
         position: sticky;
+      }
+      @include screen('tablet') {
+        position: absolute;
+        inset: 0;
       }
     }
     .title {
       color: #fff;
       padding: 18px 20px;
-      font-size: rem(28);
+      font-size: $fz28;
       font-weight: 700;
       background: $mainColor;
       display: block;
@@ -479,14 +541,14 @@
       cursor: unset;
       @include transition(all, 0.3);
       @include screenWidth('1200') {
-        font-size: rem(22);
+        font-size: $fz22;
         padding: 15px;
       }
       @include screen('tablet') {
         cursor: pointer;
       }
       @include screen('mobile') {
-        font-size: rem(20);
+        font-size: $fz20;
       }
       &::after {
         content: '';
@@ -524,7 +586,7 @@
       }
     }
     .subTitle {
-      font-size: rem(18);
+      font-size: $fz18;
       font-weight: 500;
       letter-spacing: 0.5px;
       color: #525252;
@@ -557,12 +619,6 @@
     .contentBox {
       border: #dddddd 1px solid;
       padding: 0 15px;
-      @include screen('tablet') {
-        display: none;
-      }
-      &.open {
-        display: block;
-      }
       ul {
         border-top: 1px solid #dadfe3;
         display: none;
@@ -607,13 +663,14 @@
   .productsFilterList {
     width: 100%;
     flex-grow: 1;
+    position: relative;
     table {
       width: 100%;
     }
   }
 
   .tableBtn {
-    font-size: rem(18);
+    font-size: $fz18;
     color: #000;
     padding: 10px 20px;
     border-radius: 10px;
@@ -622,11 +679,17 @@
     position: relative;
     max-width: 160px;
     text-align: center;
-    margin: 10px 0 10px auto;
+    margin: 0 0 0 auto;
     background: #fff;
     z-index: 9;
+    position: absolute;
+    right: 0;
+    transform: translateY(calc(-100% - 10px));
     @include transition(all, 0.3);
     @include screen('tablet') {
+      position: relative;
+      margin: 0 0 10px;
+      transform: translateY(0);
       max-width: none;
       width: 100%;
     }
@@ -690,7 +753,7 @@
     td {
       &:first-child {
         text-align: left;
-        font-size: rem(18);
+        font-size: $fz18;
         font-weight: 600;
         color: $mainColor;
       }
@@ -712,6 +775,7 @@
   }
   .productsInfoTopBox {
     padding: 0 0 4.5%;
+    margin-bottom: 0;
     background: linear-gradient(to bottom, rgba(255, 255, 255, 1) 80%, rgba(238, 241, 247, 1) 100%);
     .container {
       &:after {
@@ -730,7 +794,7 @@
         margin: 0 0 10px;
       }
       .subTitle {
-        font-size: rem(36);
+        font-size: $fz36;
         font-weight: 700;
         color: $mainColor;
         letter-spacing: 2px;
@@ -770,7 +834,7 @@
       th {
         width: 210px;
         background: #eef1f7;
-        font-size: rem(18);
+        font-size: $fz18;
         font-weight: normal;
       }
       th,
@@ -780,9 +844,9 @@
       }
       td {
         color: #535353;
-        font-size: rem(18);
+        font-size: $fz18;
         @include screen('tablet') {
-          font-size: rem(16);
+          font-size: $fz16;
         }
       }
     }
@@ -802,6 +866,7 @@
       top: auto;
       margin: 0 auto 30px;
       order: 0;
+      box-shadow: none;
     }
     .bigPic {
       padding: 30px;
@@ -889,12 +954,12 @@
         align-items: center;
         flex-grow: 1;
         width: auto;
-        font-size: rem(24);
+        font-size: $fz24;
         font-weight: 700;
         position: relative;
         &::after {
           content: 'Download';
-          font-size: rem(16);
+          font-size: $fz16;
           color: #fff;
           font-weight: normal;
           display: block;
@@ -921,14 +986,14 @@
       align-items: center;
       justify-content: center;
       width: 35%;
-      font-size: rem(21);
+      font-size: $fz21;
       font-weight: 700;
       padding: 0 0 0 20px;
       margin: -1px -1px -1px -40px;
       clip-path: polygon(40px 0%, 100% 0%, 100% 100%, 0% 100%);
       position: relative;
       @include screen('mobile') {
-        font-size: rem(18);
+        font-size: $fz18;
         width: 100%;
         clip-path: none;
         margin: 0;
@@ -1008,7 +1073,7 @@
           position: sticky;
           top: 60px;
           width: 25%;
-          font-size: rem(32);
+          font-size: $fz32;
           font-weight: 500;
           min-width: 120px;
           color: $mainColor;
@@ -1016,12 +1081,12 @@
           text-indent: 10px;
           padding: 0 20px 0 0;
           @include screen('tablet') {
-            font-size: rem(26);
+            font-size: $fz26;
             letter-spacing: 5px;
             text-indent: 5px;
           }
           @include screen('mobile') {
-            font-size: rem(18);
+            font-size: $fz18;
             letter-spacing: 2px;
             text-indent: 2px;
             width: 100%;
@@ -1034,9 +1099,9 @@
         .infoBox {
           flex-grow: 1;
           width: 75%;
-          font-size: rem(18);
+          font-size: $fz18;
           @include screen('tablet') {
-            font-size: rem(16);
+            font-size: $fz16;
           }
           @include screen('mobile') {
             width: 100%;
@@ -1053,14 +1118,14 @@
             position: relative;
           }
           .title {
-            font-size: rem(21);
+            font-size: $fz21;
             font-weight: 400;
             letter-spacing: 2px;
             text-indent: 2px;
             color: $mainColor;
             margin: 0 0 5px;
             @include screen('tablet') {
-              font-size: rem(18);
+              font-size: $fz18;
             }
             &::before {
               content: '';
@@ -1126,15 +1191,15 @@
   }
   .productsSearch {
     .subTitle {
-      font-size: rem(24);
+      font-size: $fz24;
       font-weight: 700;
       margin: 0 0 40px;
       color: $mainColor;
       @include screen('tablet') {
-        font-size: rem(20);
+        font-size: $fz20;
       }
       @include screen('mobile') {
-        font-size: rem(18);
+        font-size: $fz18;
         margin: 0 0 20px;
       }
     }
@@ -1148,17 +1213,17 @@
       white-space: nowrap;
       .title {
         color: $mainColor;
-        font-size: rem(24);
+        font-size: $fz24;
         font-weight: 700;
         display: flex;
         align-items: center;
         margin: 0 0 15px 0;
         letter-spacing: 2px;
         @include screen('tablet') {
-          font-size: rem(20);
+          font-size: $fz20;
         }
         @include screen('mobile') {
-          font-size: rem(18);
+          font-size: $fz18;
         }
         &::before {
           content: '';
@@ -1199,7 +1264,7 @@
           }
         }
         button {
-          font-size: rem(24);
+          font-size: $fz24;
           font-weight: 700;
           color: #fff;
           padding: 0;
@@ -1207,11 +1272,11 @@
           width: 160px;
           flex-shrink: 0;
           @include screen('tablet') {
-            font-size: rem(18);
+            font-size: $fz18;
             width: 100px;
           }
           @include screen('mobile') {
-            font-size: rem(16);
+            font-size: $fz16;
             width: 80px;
           }
         }
@@ -1228,13 +1293,13 @@
           span {
             display: block;
             margin: 0 10px 0 0;
-            font-size: rem(18);
+            font-size: $fz18;
             font-weight: 400;
             @include screen('tablet') {
               width: 70px;
             }
             @include screen('mobile') {
-              font-size: rem(16);
+              font-size: $fz16;
             }
           }
         }
