--- a/css/products.css
+++ b/css/products.css
@@ -511,7 +511,7 @@
   left: 100%;
   top: 10px;
   writing-mode: vertical-lr;
-  background: #fff;
+  background: #fdd100;
   padding: 10px 0px;
   border-radius: 0 5px 5px 0;
   cursor: pointer;
