--- a/scss/products.scss
+++ b/scss/products.scss
@@ -482,7 +482,7 @@
       top: 10px;
       -ms-writing-mode: tb-lr;
       writing-mode: vertical-lr;
-      background: #fff;
+      background: $secColor;
       padding: 10px 0px;
       border-radius: 0 5px 5px 0;
       cursor: pointer;
